# micaflow

./: .buildinfo  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  boutiques.json  examples.html  genindex.html  getting_started.html  index.html  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  requirements_310.txt  requirements_311.txt  requirements_39.txt  scripts.html  search.html  searchindex.js  setup.py
.github/workflows/: build-containers.yml  build_wheels_PyPI.yml  main.yml  pytest.yml
_modules/: collections.html  index.html
_modules/EPI_MRI/: EPIMRIDistortionCorrection.html  LinearOperators.html  Preconditioners.html
_modules/colorama/: initialise.html
_modules/dipy/core/: gradients.html
_modules/dipy/denoise/: patch2self.html
_modules/micaflow/scripts/: SDC.html  apply_SDC.html  apply_warp.html  bet.html  bias_correction.html  compute_fa_md.html  denoise.html  motion_correction.html  normalize.html  synthseg.html  texture_generation.html
_modules/optimization/: ADMM.html
_modules/scipy/ndimage/: _interpolation.html
_modules/tqdm/: std.html
_sources/: examples.rst.txt  getting_started.rst.txt  index.rst.txt  pipeline.rst.txt  scripts.rst.txt
_sources/scripts/: SDC.rst.txt  apply_SDC.rst.txt  apply_warp.rst.txt  bet.rst.txt  bias_correction.rst.txt  calculate_dice.rst.txt  calculate_jaccard.rst.txt  compute_fa_md.rst.txt  coregister.rst.txt  denoise.rst.txt  extract_b0.rst.txt  index.rst.txt  motion_correction.rst.txt  normalize.rst.txt  synth_b0.rst.txt  synthseg.rst.txt  texture_generation.rst.txt
_sources/scripts/_autosummary/: scripts.rst.txt
_static/css/: custom.css
_templates/: module.html
docs/: Makefile  add_docstrings.py  generate_script_docs.py  make.bat
docs/source/: conf.py  index.rst  pipeline.rst  scripts.rst
docs/source/scripts/: SDC.rst  apply_SDC.rst  apply_warp.rst  bet.rst  bias_correction.rst  coregister.rst  denoise.rst  normalize.rst  texture_generation.rst
examples/: readme.md  synthseg_registration.py
micaflow/: cli.py
micaflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
micaflow/resources/: Snakefile  config.yaml  config_BIDS.yaml  dag.dot
micaflow/scripts/: SDC.py  apply_SDC.py  apply_warp.py  bet.py  bias_correction.py  calculate_dice.py  calculate_jaccard.py  compute_fa_md.py  coregister.py  denoise.py  extract_b0.py  motion_correction.py  normalize.py  synth_b0.py  synthseg.py  texture_generation.py  util_bids_pathing.py
micaflow/scripts/HD_BET/: entry_point.py
micaflow/scripts/SynthSeg/: estimate_priors.py  labels_to_image_model.py  metrics_model.py  model_inputs.py  predict_denoiser.py  (+4 more)
scripts/: SDC.html  apply_SDC.html  apply_warp.html  bet.html  bias_correction.html  calculate_dice.html  calculate_jaccard.html  compute_fa_md.html  coregister.html  denoise.html  extract_b0.html  index.html  motion_correction.html  normalize.html  synth_b0.html  synthseg.html  texture_generation.html
scripts/_autosummary/: scripts.html
tests/: test_cli_interface.py  test_util_bids_pathing.py
(+4 files in other folders)
