[build-system]
requires = ["setuptools>=61,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micaflow"
version = "0.1.0"
description = "MicaFlow MRI processing pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MICA Lab", email = "info@example.com" }]
license = { text = "MIT" }
dependencies = [
    "absl-py",
    "acres",
    "antspyx",
    "anyio",
    "appdirs",
    "astunparse",
    "attrs",
    "batchgenerators",
    "blosc",
    "certifi",
    "charset-normalizer",
    "ci-info",
    "click",
    "ConfigArgParse",
    "connection_pool",
    "contourpy",
    "cycler",
    "datrie",
    "deepdiff",
    "dipy",
    "docutils",
    "dpath",
    "dynamic_network_architectures",
    "einops",
    "etelemetry",
    "exceptiongroup",
    "fastjsonschema",
    "fft-conv-pytorch",
    "filelock",
    "flatbuffers",
    "fonttools",
    "fsspec",
    "future",
    "gast",
    "gitdb",
    "GitPython",
    "google-pasta",
    "graphviz",
    "grpcio",
    "httpcore",
    "httpx",
    "humanfriendly",
    "idna",
    "imagecodecs",
    "imageio",
    "importlib_resources",
    "isodate",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter_core",
    "keras",
    "kiwisolver",
    "lazy_loader",
    "libclang",
    "looseversion",
    "lxml",
    "Markdown",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "mdurl",
    "ml-dtypes",
    "mpmath",
    "msgpack",
    "namex",
    "nbformat",
    "ndindex",
    "networkx",
    "nibabel",
    "nipype",
    "numexpr",
    "numpy",
    "opt_einsum",
    "optree",
    "orderly-set",
    "packaging",
    "pandas",
    "patsy",
    "pillow",
    "plac",
    "platformdirs",
    "protobuf",
    "prov",
    "psutil",
    "PuLP<2.8",
    "puremagic",
    "py-cpuinfo",
    "pydicom",
    "pydot",
    "Pygments",
    "PyHySCO",
    "pyparsing",
    "python-gdcm",
    "pytz",
    "PyYAML",
    "rdflib",
    "referencing",
    "requests",
    "reretry",
    "rich",
    "rpds-py",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "setuptools-scm",
    "SimpleITK",
    "simplejson",
    "six",
    "smart-open",
    "smmap",
    "snakemake",
    "statsmodels",
    "stopit",
    "sympy",
    "tabulate",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow",
    "termcolor",
    "threadpoolctl",
    "throttler",
    "tifffile",
    "tomli",
    "toposort",
    "torch",
    "tqdm",
    "traitlets",
    "traits",
    "trx-python",
    "typing_extensions",
    "tzdata",
    "webcolors",
    "Werkzeug",
    "wrapt",
    "yacs",
    "yte",
    "colorama>=0.4",
    "lamareg>=1.5.1",
    "nnunetv2",
    "nilearn"
]

[project.scripts]
micaflow = "micaflow.cli:main"

[tool.setuptools.packages.find]
where = [""]
include = ["micaflow*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"micaflow" = [
    "resources/*",
    "resources/*/*",
    "models/*",
    "models/*/*",
]